2016-04-07  Andy Buckley  <andy.buckley@cern.ch>

	* Add comBoost functions and methods to Beam.hh, and tidy
	LorentzTransformation.

	* Restructure Beam projection functions for beam particle and
	sqrtS extraction, and add asqrtS functions.

	* Rename and improve PID and Particle Z,A,lambda functions ->
	nuclZ,nuclA,nuclNlambda.

2016-04-05  Andy Buckley  <andy.buckley@cern.ch>

	* Improve binIndex function, with an optional argument to allow
	overflow lookup, and add it to testMath.

	* Adding setPE, setPM, setPtEtaPhiM, etc. methods and
	corresponding mk* static methods to FourMomentum, as well as
	adding more convenience aliases and vector attributes for
	completeness. Coordinate conversion functions taken from
	HEPUtils::P4. New attrs also mapped to ParticleBase.

2016-03-29  Andy Buckley  <andy.buckley@cern.ch>

	* ALEPH_1996_S3196992.cc, ATLAS_2010_S8914702.cc,
	ATLAS_2011_I921594.cc, ATLAS_2011_S9120807.cc,
	ATLAS_2012_I1093738.cc, ATLAS_2012_I1199269.cc,
	ATLAS_2013_I1217867.cc, ATLAS_2013_I1244522.cc,
	ATLAS_2013_I1263495.cc, ATLAS_2014_I1307756.cc,
	ATLAS_2015_I1364361.cc, CDF_2008_S7540469.cc,
	CMS_2015_I1370682.cc, MC_JetSplittings.cc, STAR_2006_S6870392.cc:
	Updates for new FastJets interface, and other cleaning.

	* Deprecate 'standalone' FastJets constructors -- they are
	misleading.

	* More improvements around jets, including unbound conversion and
	filtering routines between collections of Particles, Jets, and
	PseudoJets.

	* Place 'Cut' forward declaration in a new Cuts.fhh header.

	* Adding a Cuts::OPEN extern const (a bit more standard- and
	constant-looking than Cuts::open())

2016-03-28  Andy Buckley  <andy.buckley@cern.ch>

	* Improvements to FastJets constructors, including specification
	of optional AreaDefinition as a constructor arg, disabling dodgy
	no-FS constructors which I suspect don't work properly in the
	brave new world of automatic ghost tagging, using a bit of
	judicious constructor delegation, and completing/exposing use of